--- a/templates/admin/insertDocument.html.twig
+++ b/templates/admin/insertDocument.html.twig
@@ -24,17 +24,10 @@
       <legend class="mt-4">Switches</legend>
       <div class="form-check form-switch">
         <input class="form-check-input" name="choixBox" type="checkbox" id="flexSwitchCheckChecked" checked="">
-        <label class="form-check-label" for="flexSwitchCheckChecked">Checked switch checkbox input</label>
+        <label class="form-check-label" for="flexSwitchCheckChecked">Actif</label>
       </div>
     </fieldset>
-	<div class="form-group">
-      <label for="exampleInputPassword1" class="form-label mt-4">Utilisateurs</label>
-      <select name="user"class="form-control">
-	  {% for item in Utilisateur %}
-		<option value={{item.id}}> {{ item.nom }} {{ item.prenom }}  </option>
-		{% endfor %}
-	  </select>
-    </div>
+	
 	<button type="submit" class="btn btn-primary">Envoyer</button>
 </form>
 {% endblock %}
