--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,18 +25,16 @@
     <div class="collapse navbar-collapse" id="navbarColor01">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="/dashboard">Home
+          <a class="nav-link active" href="/document">Home
             <span class="visually-hidden">(current)</span>
           </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
-        </li>
+        
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">GED</a>
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Document</a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="/insertDocument">
-			Insert</a>
+            <a class="dropdown-item" href="/insertDocument">Insert</a>
+	
           </div>
         </li>
         <li class="nav-item dropdown">
